# tui_lsof

./: .gitignore  MANIFEST.in  pyproject.toml
src/lsof_tui/: app.py  constants.py  model.py  network.py  tui.py  widgets.py
src/lsof_tui/assets/: styles.tcss
