[project]
name = "lsof-tui"
version = "1.0.0"
description = "A terminal user interface for viewing open connections using lsof."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.0.0",
    "textual>=5.0.1",
]

[project.scripts]
lsof-tui = "lsof_tui.tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
